practice/practice2/a8.yaml
kind: Pod
apiVersion: v1
metadata:
  name: kucc4
spec:
  containers:
  - name: nginx
    image: nginx
  - name: redis
    image: redis
  - name: tomcat
    image: tomcat
