practice/practice2/a11.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cka-deployment
  name: cka-deployment-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30082
  selector:
    app: cka-deployment
  type: NodePort
