practice/practice2/a12.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: front-end-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
