practice/practice2/a16.allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-egress
spec:
  podSelector: {}
  policyTypes: 
  - Egress
  egress:
  - {}
