practice/practice2/a16.allow-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-policy
spec:
  podSelector: {}
  policyTypes: 
  - Ingress
  ingress:
  - {}
