practice/practice2/a16.default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-policy
spec:
  policyTypes:
  - Ingress
  podSelector: {}
