practice/practice2/a17.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-port
  namespace: test-net
spec:
  policyTypes: 
  - Ingress
  - Egress
  podSelector: {}
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test-net
    ports:
    - port: 80
  egress:
  - to:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: test-net
    ports:
    - port: 80
      protocol: TCP
