practice/practice2/a18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-port
  namespace: default
spec:
  policyTypes: 
  - Ingress
  podSelector: {}
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - port: 80
