practice/practice2/demo1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-all
spec:
  podSelector:  {}
  policyTypes: 
  - Ingress
  ingress: 
  - {}
